--- a/css/style.css
+++ b/css/style.css
@@ -285,8 +285,8 @@ body {
 }
 
 #slide-2 {
-	background-color: #1abc9c;
-	color: #e4e6e5;
+	background-color: #fafad8;
+	color: #420203;
     padding-bottom: 30px;
 }
 
@@ -421,8 +421,8 @@ body {
 }
 
 #slide-4 {
-	background-color: #34495e;
-	color: #e4e6e5;
+	background-color: #fafad8;
+	color: #420203;
 	padding-top: 30px;
 	padding-bottom: 30px;
 }
@@ -434,9 +434,9 @@ body {
 
 
 #slide-5 {
-	background-color: #f39c12;
-	color: #287951;
-	padding-top: 30px;
+	background-color: #fafad8;
+	color: #420203;
+	padding-top: 10px;
 	padding-bottom: 30px;
 }
 
