--- a/css/style.css
+++ b/css/style.css
@@ -684,3 +684,37 @@ body {
     font-size: 16px;
     color: #fafad8;
 }
+.pricing_header{
+	text-align: center;
+    color: #75b1ae;
+}
+.list-group-item{
+    color: #043454;
+}
+
+#slide-5 h1{
+    margin-top: 0;
+}
+.description p{
+    text-align: left;
+    font-size: 12px;
+}
+.logo a{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: auto;
+    font-family: Galano, sans-serif;
+    font-size: 36px;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+}
+.sp-back{
+    font-size: 10px;
+}
