--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,15 @@
 	font-family: "Titillium Web", sans-serif;
 	font-weight: 600;
 }
+.font-semibold {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 600;
+}
 
 .font-light {
 	font-family: "Titillium Web", sans-serif;
 	font-weight: 300;
+    color: #fafad8;
 }
 
 .breaker {
@@ -198,6 +203,9 @@ body {
 		text-align: left;
 	}
 }
+#slide-6 div{
+    color: #fafad8;
+}
 
 :focus {outline:none;}
 ::-moz-focus-inner {border:0;}
@@ -225,7 +233,9 @@ body {
 #slide-2 .font-semibold{
     margin-bottom: 40px;
 }
-
+#slide-2 .correct{
+    margin-bottom: 22px;
+}
 #reg-top{
     padding: 10px 0 10px 0;
 }
@@ -718,7 +728,7 @@ body {
 #slide-5 h1{
     margin-top: 0;
 }
-.description p{
+.container-fluid p{
     text-align: left;
     font-size: 14px;
     color: #724439;
@@ -731,22 +741,48 @@ hr{
     margin-top: 0;
     margin-bottom: 0;
 }
+
 .logo a{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: auto;
     font-family: Galano, sans-serif;
     font-size: 36px;
     text-transform: uppercase;
     color: #fff;
     text-decoration: none;
 }
+.logo .col-md-6{
+	margin-right: -150px;
+}
+
 .sp-back{
     font-size: 10px;
+}
+a {
+    text-decoration: none;
+    color: #461f10;
+    padding: 15px 10px 15px 10px;
+    font-size: 16px;
+}
+a:visited{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: none;
+    color: #461f10;
+    padding: 15px 10px 15px 10px;
+    font-size: 16px;
+}
+
+.redirect{
+    background-color: #fafad8;
+}
+.link{
+    margin-top: 100px;
+    line-height: 5;
+}
+.link a{
+    font-size: 18px;
+}
+.correct{
+    margin-bottom: 22px;
 }
