--- a/css/style.css
+++ b/css/style.css
@@ -805,6 +805,42 @@ a:hover {
 
 .disabled {
   pointer-events: none;
-  /* for "disabled" effect */
-  opacity: 0.4;
+}
+
+.disabled .thumbnail img{
+  -webkit-filter: grayscale(100%);
+  opacity: 0.5;
+}
+
+.overlay{
+  position: absolute;
+  z-index: 2;
+  padding: 110px 0 0 70px;
+  text-transform: uppercase;
+  font-size: 14px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.question{
+  color: #fafad8;
+  font-size: 22px;
+
+}
+
+.question img{
+  margin-bottom: 15px;
+  padding-left: 45%;
+  padding-top: 5px;
+}
+
+.question a{
+  color: #fafad8;
+  text-decoration: underline;
+  font-size: 22px;
+}
+
+.image{
+  text-align: center;
+  padding-bottom: 10px;
 }
